Added functionality to be able to create a new virtual machine